# lets-do-it

./: .gitignore  LICENSE  README.md  lets_do_it.py  pyproject.toml  results.txt  todo_script.sh
notebooks/: examples.ipynb  pytorch.csv
