[tool.poetry]
name = "lets-do-it"
version = "0.1.0"
description = ""
authors = ["J Xu <jxucoder@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
jupyterlab = "^3.2.8"
pretty-html-table = "^0.9.15"

[tool.poetry.dev-dependencies]
pandas = "^1.4.0"
streamlit = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
